# gr-day-ahead-price-forecaster

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: daily_forecast.yml  monthly_recalibration.yml  score_actuals.yml  sync_to_hf.yml
.hf/: README.md  requirements.txt
app/: streamlit_app.py
forecasts/: backtest_summary.json  calibration.parquet  history.json  history.parquet  latest.json  model_health.json
notebooks/: 01_eda.ipynb
scripts/: backtest.py  conformal_report.py  data_quality_report.py  download_data.py  evaluate_baselines.py  experiment_fuel.py  experiment_models.py  experiment_res_forecast.py  experiment_residual_tuning.py  experiment_training_window.py  experiment_weather.py  make_forecast.py  monthly_revalidation.py  shap_analysis.py  train_model.py  update_actuals.py
src/gr_epf/: __init__.py  conformal.py  data.py  evaluate.py  features.py  forecast.py  governance.py  models.py  quality.py  weather.py
tests/: test_backtest.py  test_conformal.py  test_data.py  test_dst.py  test_evaluate.py  test_features.py  test_forecast.py  test_governance.py  test_models.py  test_quality.py  test_smoke.py  test_weather.py
